# marble-ner

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE  Makefile  README.md  logger.py  main.py  pyproject.cpu.toml  pyproject.gpu.toml  pyproject.toml  test_main.py
.github/workflows/: build.yml  deploy.yml  docker.yml  production.yml  staging.yml
src/: auth.rs  inference.rs  main.rs  trace.rs
