[package]
name = "ner"
version = "0.1.0"
edition = "2024"

[features]
cpu = []
gpu = ["gline-rs/cuda", "ort"]

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
gline-rs = "1.0.1"
jiff = "0.2.23"
json-subscriber = "0.2.8"
orp = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

ort = { version = "2.0.0-rc.9", optional = true, features = ["cuda"] }
anyhow = "1.0.102"
