[project]
name = "marble-ner"
version = "0.1.0"
description = ""
authors = [
    { name = "Antoine Popineau", email = "antoine.popineau@checkmarble.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[default] (>=0.34.0,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "gliner (>=0.2.16,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry.dependencies]
torch = [
    { platform = "linux", source = "torch-cpu" },
    { platform = "darwin", source = "PyPI" },
]

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
